--- a/public/project/views/player-list.view.client.html
+++ b/public/project/views/player-list.view.client.html
@@ -26,11 +26,16 @@
         <div ng-repeat="player in model.players">
             <li class="list-group-item">
                 <div class="row">
-                    <div class="col-xs-11">
+                    <div class="col-xs-10">
                         {{player.name}}
                     </div>
-                    <div ng-click="model.deletePlayer(player._id)" class="col-xs-1">
-                        <a href="#!/login">
+                    <div class="col-xs-1">
+                        <a href="#!/login/{{player._id}}">
+                            <span class="glyphicon glyphicon-cog pull-right"></span>
+                        </a>
+                    </div>
+                    <div class="col-xs-1">
+                        <a ng-click="model.deletePlayer(player._id)" href="#!/login">
                             <span class="glyphicon glyphicon-remove pull-right"></span>
                         </a>
                     </div>
