--- a/public/project/views/User/login.view.client.html
+++ b/public/project/views/User/login.view.client.html
@@ -1,20 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>NEU Men's Rugby Team</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet">
-
-</head>
 
 <body>
 
@@ -32,12 +15,17 @@
         <div id="navbar" class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
+                    <input ng-model="username" class="form-control"
+                           placeholder="username"
+                           type="text"/>
                 </div>
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
+                    <input ng-model="password" class="form-control"
+                           placeholder="password"
+                           type="password">
                 </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
+                <a ng-click="model.login(username, password)" class="btn btn-primary">Login</a>
+                <a type="submit" href="#/register" class="btn btn-success">Register</a>
             </form>
         </div><!--/.navbar-collapse -->
     </div>
@@ -53,9 +41,6 @@
                 <li>
 
                 </li>
-                <li>
-
-                </li>
             </ol>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 
@@ -63,7 +48,7 @@
         <div class="col-md-6">
             <h2>Events</h2>
             <div>
-                
+
             </div>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default" href="dbms.html" role="button">View more &raquo;</a></p>
@@ -75,15 +60,5 @@
     <footer>
         <p>&copy; Company 2014</p>
     </footer>
-</div> <!-- /container -->
-
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+</div>
 </body>
-</html>
