got some navigation going

--- a/public/project/views/User/login.view.client.html
+++ b/public/project/views/User/login.view.client.html
@@ -24,8 +24,9 @@
                            placeholder="password"
                            type="password">
                 </div>
-                <a ng-click="model.login(username, password)" class="btn btn-primary">Login</a>
-                <a type="submit" href="#/register" class="btn btn-success">Register</a>
+                <!--<a ng-click="model.login(username, password)" class="btn btn-primary">Login</a>-->
+                <a type="submit" href="#!/player" class="btn btn-primary">Login</a>
+                <a type="submit" href="#!/register" class="btn btn-success">Register</a>
             </form>
         </div><!--/.navbar-collapse -->
     </div>
