--- a/public/project/views/User/register.view.client.html
+++ b/public/project/views/User/register.view.client.html
@@ -13,5 +13,5 @@
            placeholder="verify password"
            type="password">
     <a class="btn btn-primary btn-block" ng-click="model.register(username, password, passconfirm)">Register</a>
-    <a class="btn btn-danger btn-block" href="#/login">Cancel</a>
+    <a class="btn btn-danger btn-block" href="#!/login">Cancel</a>
 </div>
