--- a/public/project/views/players/player-list.view.client.html
+++ b/public/project/views/players/player-list.view.client.html
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-text pull-left">
+                <a href="#!/login">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
             </div>
