--- a/public/project/views/User/login.view.client.html
+++ b/public/project/views/User/login.view.client.html
@@ -43,8 +43,25 @@
 
                 </li>
             </ol>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
+            <div ng-repeat="player in model.players">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-10">
+                            {{player.name}}
+                        </div>
+                        <div class="col-xs-1">
+                            <a href="#!/player/{{player._id}}">
+                                <span class="glyphicon glyphicon-cog pull-right"></span>
+                            </a>
+                        </div>
+                        <div class="col-xs-1">
+                            <a ng-click="model.deletePlayer(player._id)" href="#!/login">
+                                <span class="glyphicon glyphicon-remove pull-right"></span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+            </div>
         </div>
         <div class="col-md-6">
             <h2>Events</h2>
