--- a/public/project/views/players/player-list.view.client.html
+++ b/public/project/views/players/player-list.view.client.html
@@ -31,7 +31,7 @@
                         {{player.name}}
                     </div>
                     <div class="col-xs-1">
-                        <a href="#!/login/{{player._id}}">
+                        <a href="#!/player/{{player._id}}">
                             <span class="glyphicon glyphicon-cog pull-right"></span>
                         </a>
                     </div>
