--- a/public/project/views/blog/blog-list.view.client.html
+++ b/public/project/views/blog/blog-list.view.client.html
@@ -12,31 +12,31 @@
             </div>
             <div class="navbar-header">
                 <a class="navbar-brand no-left-padding no-left-margin">
-                    Player List
+                    Blog List
                 </a>
             </div>
         </div>
     </nav>
-    <input ng-model="model.player.name" class="form-control"/>
+    <input ng-model="model.blog.name" class="form-control"/>
     <a class="btn btn-primary btn-block"
-       ng-click="model.createPlayer(model.player)">
+       ng-click="model.createBlog(model.blog)">
         Create
     </a>
     <br>
     <ul class="list-group">
-        <div ng-repeat="player in model.players">
+        <div ng-repeat="blog in model.blogs">
             <li class="list-group-item">
                 <div class="row">
                     <div class="col-xs-10">
-                        {{player.name}}
+                        {{blog.name}}
                     </div>
                     <div class="col-xs-1">
-                        <a href="#!/player/{{player._id}}">
+                        <a href="#!/blog/{{blog._id}}">
                             <span class="glyphicon glyphicon-cog pull-right"></span>
                         </a>
                     </div>
                     <div class="col-xs-1">
-                        <a ng-click="model.deletePlayer(player._id)" href="#!/login">
+                        <a ng-click="model.deleteBlog(blog._id)" href="#!/login">
                             <span class="glyphicon glyphicon-remove pull-right"></span>
                         </a>
                     </div>
